<resources>
    <string name="app_name">GroTrack Beta</string>
    <string name="imageFolder">GroTrack</string>
    <string name="password_err">Password is Required</string>
    <string name="email_err">Email Address is Required</string>
    <string name="enter_email">Enter Email..</string>
    <string name="enter_password">Enter Password..</string>
    <string name="existing_patient">Existing Patient</string>
    <string name="new_patient">New Patient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_patient_button_create">Create</string>
    <string name="create_new_patient">Create New Patient</string>
    <string name="start_shoot">Start Shoot</string>
    <string name="select_all_positions">Select All Positions</string>
    <string name="finished">Finished</string>
    <string name="log_out">Log out</string>
</resources>