<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="false"
    android:layout_height="match_parent"
    tools:context=".ui.glo.fragments.GloHomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/glo_logo" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.button.MaterialButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cornerRadius="57dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/gloPatient1"
            android:layout_marginBottom="13dp"
            app:iconGravity="top"
            android:paddingEnd="25dp"
            app:icon="@drawable/ic_patient"
            app:iconSize="55dp"
            android:id="@+id/existingPatient"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/input_text"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/existing_patient"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/newPatient"
            android:layout_marginTop="50dp"
            app:cornerRadius="57dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/gloPatient2"
            android:layout_marginBottom="13dp"
            android:paddingEnd="25dp"
            app:iconGravity="top"
            app:iconSize="55dp"
            app:icon="@drawable/ic_patient"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/input_text"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/new_patient"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/logout_border"
        android:backgroundTint="#F6F7FA"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingTop="7dp"
        android:paddingRight="25dp"
        android:paddingBottom="7dp"
        android:text="@string/log_out"
        android:textColor="@color/colorLogoutBorder"
        android:textSize="14sp"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>