<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.glo.login.GloLoginActivity">

    <include
        android:id="@+id/defaultLay"
        layout="@layout/default_layout_glo" />

    <ImageView
        android:id="@+id/battery"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_battery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gloColor" />

    <TextView
        android:id="@+id/batteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gloColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/battery"
        app:layout_constraintStart_toEndOf="@id/battery"
        app:layout_constraintTop_toTopOf="@id/battery" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btWifi"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:onClick="onClickShowWifi"
        android:src="@drawable/ic_wifi"
        android:tint="@color/gloColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/defaultLay">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_textfield"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/email_err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-18dp"
            android:text="@string/email_err"
            android:textColor="@color/error"
            android:visibility="gone" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_textfield"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/password_err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/password_err"
            android:textColor="@color/error"
            android:visibility="gone" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="@dimen/round_button_diameter"
        android:layout_height="@dimen/round_button_diameter"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/gloColor"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickSignIn"
        android:padding="2dp"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintStart_toStartOf="@+id/sign_in"
        app:layout_constraintTop_toTopOf="@+id/sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>